force-app/main/default/objects/Shipment__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>Expected Arrival Date for shipment.</description>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>