force-app/main/default/objects/Shipment__c/fields/Printing_Press__c.field-meta.xml
<CustomField>
    <fullName>Printing_Press__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Printing Press</label>
    <referenceTo>Printing_Press__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>