force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Quantity__c</columns>
    <columns>Shipping_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Store__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>